--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
+    "msw": "^2.7.1",
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.3",
